Fix Docker health check and startup dependencies
- Remove health check dependency for frontend (allow parallel startup)
- Increase backend health check start-period from 40s to 120s
- Increase CI wait time from 60s to 90s
- Fixes persistent 'container is unhealthy' issue in CI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,7 @@ services:
     ports:
       - "80:80"
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/"]
