--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ chromadb==0.4.18
 # Document Processing
 PyMuPDF==1.23.8
 python-docx==1.1.0
+PyPDF2==3.0.1
 openpyxl==3.1.2
 pdfplumber==0.10.3
 markdown==3.5.1
