feat: 优化数据库和应用管理系统
核心更新：
- 🗑️ 清理孤立的固定Q&A数据（减少48MB空间）
- 🔧 修复数据库路径配置，使用绝对路径确保一致性
- ✨ 添加级联删除功能：删除应用时自动清理关联Q&A
- 📝 更新应用删除API，返回清理统计信息
- 🔒 保护敏感配置文件（api_config.json）

优化结果：
- 数据库从 74MB 优化到 26MB
- 自动清理孤立数据，避免空间浪费
- 改进数据完整性和一致性

文档更新：
- 添加清理总结文档
- 添加核心框架文档
- 添加Git提交指南
- 添加快速参考文档

--- a/.gitignore
+++ b/.gitignore
@@ -4,100 +4,52 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual Environment
+env/
 venv/
 ENV/
-env/
-.venv
+build/
+dist/
+*.egg-info/
 
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# Logs
-*.log
-logs/
-backend/logs/
-backend_server.log
-frontend.log
-
-# Database
-*.db
-*.db-journal
-*.sqlite3
-backend/app/data/forge.db
+# 数据库和数据文件
+backend/app/data/forge.db*
 backend/app/data/chromadb/
-app/data/forge.db
-app/data/chromadb/
-
-# Uploads and processed files
 backend/app/data/uploads/
 backend/app/data/processed/
 backend/app/data/models/
-
-# API Configuration
 backend/app/data/api_config.json
+
+# 日志文件
+backend/logs/
+*.log
+frontend/frontend.log
 
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# Build outputs
-dist/
-dist-ssr/
-*.local
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Testing
-coverage/
-.nyc_output/
-*.test.js.snap
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
-backend.pid
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Backup files
-*.bak
-*.backup
+# 编辑器
+.vscode/
+.idea/
+*.swp
+*.swo
 *~
 
-# Documentation (generated)
-docs/_build/
+# 系统文件
+.DS_Store
+Thumbs.db
 
-# Deployment
-docker-compose.override.yml
+# 环境变量
+.env
+.env.local
+
+# 临时文件
+tmp/
+temp/
+*.tmp
+
+# 构建产物
+frontend/dist/
+frontend/.vite/
