fix: 改进CI健康检查机制，添加重试和更好的错误日志
改进内容：
- ✨ 添加健康检查重试机制（最多30次，每次5秒）
- 📝 添加详细的进度日志输出
- 🐛 失败时自动显示容器日志便于调试
- ⚡ 优化前端检查（10次重试，每次3秒）
- 🔧 静音curl输出，避免误导性错误信息

这解决了服务启动较慢时健康检查超时失败的问题

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,17 +174,41 @@ jobs:
         run: |
           docker compose up -d
           echo "Waiting for services to start..."
-          sleep 90
+          sleep 60
       
       - name: Check backend health
         run: |
-          curl -f http://localhost:8000/health || exit 1
-          echo "Backend health check passed"
+          echo "Checking backend health..."
+          max_attempts=30
+          attempt=0
+          until curl -f http://localhost:8000/health 2>/dev/null; do
+            attempt=$((attempt + 1))
+            if [ $attempt -eq $max_attempts ]; then
+              echo "Backend health check failed after $max_attempts attempts"
+              docker compose logs backend
+              exit 1
+            fi
+            echo "Attempt $attempt/$max_attempts - waiting for backend..."
+            sleep 5
+          done
+          echo "✅ Backend health check passed"
       
       - name: Check frontend accessibility
         run: |
-          curl -f http://localhost:80 || exit 1
-          echo "Frontend accessibility check passed"
+          echo "Checking frontend accessibility..."
+          max_attempts=10
+          attempt=0
+          until curl -f http://localhost:80 2>/dev/null; do
+            attempt=$((attempt + 1))
+            if [ $attempt -eq $max_attempts ]; then
+              echo "Frontend accessibility check failed after $max_attempts attempts"
+              docker compose logs frontend
+              exit 1
+            fi
+            echo "Attempt $attempt/$max_attempts - waiting for frontend..."
+            sleep 3
+          done
+          echo "✅ Frontend accessibility check passed"
       
       - name: Check API documentation
         run: |
