fix: 修复依赖包版本不兼容问题
问题修复：
- 升级 sentence-transformers 从 2.2.2 到 2.7.0
- 添加 huggingface-hub 版本约束 (>=0.20.0,<1.0.0)
- 移除 docker-compose.yml 中过时的 version 字段

这解决了 ImportError: cannot import name 'cached_download' 错误
旧版 sentence-transformers 与新版 huggingface-hub 不兼容导致容器启动失败

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,7 +24,8 @@ python-magic==0.4.27
 # AI/ML
 torch==2.1.1
 transformers==4.36.0
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0
+huggingface-hub>=0.20.0,<1.0.0
 accelerate==0.25.0
 bitsandbytes==0.41.3
 peft==0.7.1
