--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -24,32 +24,7 @@ RUN apk add --no-cache curl
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # 复制 Nginx 配置
-RUN echo 'server { \n\
-    listen 80; \n\
-    server_name localhost; \n\
-    \n\
-    location / { \n\
-        root /usr/share/nginx/html; \n\
-        index index.html index.htm; \n\
-        try_files $uri $uri/ /index.html; \n\
-    } \n\
-    \n\
-    location /api/ { \n\
-        proxy_pass http://backend:8000/api/; \n\
-        proxy_set_header Host $host; \n\
-        proxy_set_header X-Real-IP $remote_addr; \n\
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; \n\
-        proxy_set_header X-Forwarded-Proto $scheme; \n\
-    } \n\
-    \n\
-    location /v1/ { \n\
-        proxy_pass http://backend:8000/v1/; \n\
-        proxy_set_header Host $host; \n\
-        proxy_set_header X-Real-IP $remote_addr; \n\
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; \n\
-        proxy_set_header X-Forwarded-Proto $scheme; \n\
-    } \n\
-} \n' > /etc/nginx/conf.d/default.conf
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # 健康检查
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
